Media 375px setup

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,3 +14,4 @@ $very-dark-blue-2: hsl(234, 17%, 12%); // NOTE: mostly black
 @import "general";
 @import "countdown-timer";
 @import "other";
+@import "media-375"
